# oncall-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/app/: config.py  main.py  pipeline.py  report.py
agent/app/context/: git_history.py  logs.py  runbooks.py
agent/app/db/: models.py  session.py
agent/app/ingest/: alertmanager.py
agent/app/llm/: client.py
agent/app/llm/steps/: commit_analysis.py  impact.py  postmortem.py  runbook_match.py
agent/app/notify/: slack.py
agent/oncall_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/tests/: conftest.py  test_git_history.py  test_ingest.py  test_logs.py  test_report.py  test_runbooks.py  test_schemas.py
agent/tests/fixtures/: alert-firing.json  alert-resolved.json
chaos/: demo.tape  eval.py  inject.py  latest-brief.sh
demo-app/: Dockerfile
demo-app/src/: README.md  app.py  db.py  payments.py  pricing.py  shop.py
examples/: brief-high-error-rate.txt  postmortem-high-error-rate.md
runbooks/: db-connection-pool-exhausted.md  high-error-rate.md  high-latency.md  memory-pressure.md  payment-provider-outage.md
