[project]
name = "oncall-agent"
version = "0.1.0"
description = "Autonomous incident response agent: alert webhook -> context -> LLM analysis -> Slack brief -> postmortem"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "anthropic>=0.60",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
